compiling_error.txt
In file included from /Users/nasseef/Desktop/2400-code/catch2-unit-testing/factorial.cc:2:
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:231:63: error: expected ';' at end of declaration list
        SourceLineInfo( char const* _file, std::size_t _line ) noexcept;
                                                              ^
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:238:27: error: expected ';' at end of declaration list
        bool empty() const noexcept;
                          ^
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:239:63: error: expected ';' at end of declaration list
        bool operator == ( SourceLineInfo const& other ) const noexcept;
                                                              ^
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:240:62: error: expected ';' at end of declaration list
        bool operator < ( SourceLineInfo const& other ) const noexcept;
                                                             ^
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:345:20: error: expected ';' at end of declaration list
        StringRef() noexcept;
                   ^
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:346:44: error: expected ';' at end of declaration list
        StringRef( StringRef const& other ) noexcept;
                                           ^
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:347:39: error: expected ';' at end of declaration list
        StringRef( StringRef&& other ) noexcept;
                                      ^
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:348:42: error: expected ';' at end of declaration list
        StringRef( char const* rawChars ) noexcept;
                                         ^
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:349:58: error: expected ';' at end of declaration list
        StringRef( char const* rawChars, size_type size ) noexcept;
                                                         ^
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:350:50: error: expected ';' at end of declaration list
        StringRef( std::string const& stdString ) noexcept;
                                                 ^
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:351:21: error: expected ';' at end of declaration list
        ~StringRef() noexcept;
                    ^
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:353:9: error: 'auto' not allowed in function return type
        auto operator = ( StringRef other ) noexcept -> StringRef&;
        ^~~~
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:353:44: error: expected ';' at end of declaration list
        auto operator = ( StringRef other ) noexcept -> StringRef&;
                                           ^
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:356:38: error: expected ';' at end of declaration list
        void swap( StringRef& other ) noexcept;
                                     ^
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:359:9: error: 'auto' not allowed in function return type
        auto operator == ( StringRef const& other ) const noexcept -> bool;
        ^~~~
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:359:58: error: expected ';' at end of declaration list
        auto operator == ( StringRef const& other ) const noexcept -> bool;
                                                         ^
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:360:9: error: 'auto' not allowed in function return type
        auto operator != ( StringRef const& other ) const noexcept -> bool;
        ^~~~
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:360:58: error: expected ';' at end of declaration list
        auto operator != ( StringRef const& other ) const noexcept -> bool;
                                                         ^
/Users/nasseef/Desktop/2400-code/catch2-unit-testing/catch.hpp:362:9: error: 'auto' not allowed in function return type
        auto operator[] ( size_type index ) const noexcept -> char;
        ^~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
